--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -499,7 +499,11 @@
                         >01 Year With Us
                       </span>
                     </div>
-                    <img src="/firstProject/images/quote.svg" alt="quote" />
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
                   </div>
                   <span class="item__text"
                     >“ Online invoice payment helps companies save time, are
@@ -507,10 +511,227 @@
                     maximum effort. Online invoice payment helps companies save
                     time ”</span
                   >
-                  <img src="/firstProject/images/Star.svg" alt="five stars" />
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+
+                <div class="inner__content-item item">
+                  <div class="item__header">
+                    <img
+                      src="/firstProject/images/mujik.png"
+                      alt="profile picture"
+                    />
+                    <div class="item__header-text">
+                      <span class="item__header-title">Alexander R.</span>
+                      <span class="item__header-subtitle"
+                        >01 Year With Us
+                      </span>
+                    </div>
+                    <img
+                      class="item__header_quote"
+                      src="/firstProject/images/quote.svg"
+                      alt="quote"
+                    />
+                  </div>
+                  <span class="item__text"
+                    >“ Online invoice payment helps companies save time, are
+                    faster and save maximum effort for the clients and save
+                    maximum effort. Online invoice payment helps companies save
+                    time ”</span
+                  >
+                  <img
+                    class="item__img"
+                    src="/firstProject/images/Star.svg"
+                    alt="five stars"
+                  />
+                </div>
+              </div>
+
+              <div class="inner__content-slider slider">
+                <div class="slider__form">
+                  <div class="slider__scroll"></div>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__inner">
+          <div class="subscribe__content">
+            <span class="subscribe__content-text">GET 50%</span>
+            <div class="subscribe__input-wrapper">
+              <input type="text" placeholder="Enter Your Email Address" />
+              <button class="subscribe__content-button purpleButton">
+                SUBSCRIBE
+              </button>
+            </div>
+            <img
+              class="subscribe__content-img"
+              src="/firstProject/images/Food Image2.svg"
+              alt=""
+            />
           </div>
         </div>
       </div>
