--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -19,7 +19,7 @@
           <div class="header__inner">
             <div class="header__logo">
               <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
-              <span class="logo_text">eatly</span>
+              <span class="logo-text">eatly</span>
             </div>
             <nav class="header__navigation">
               <ul class="navigation_buttons">
@@ -736,5 +736,50 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <div class="footer__top__logo">
+              <img src="/firstProject/images/Logo.svg" alt="logo" />
+              <nav class="logo-eatly logo-text">eatly</nav>
+            </div>
+            <nav class="footer__top__navigation">
+              <ul class="footer__top-buttons">
+                <a href="#" class="footer__link header__link"><li>Blog</li></a
+                ><a href="#" class="footer__link header__link"
+                  ><li>Pricing</li></a
+                ><a href="#" class="footer__link header__link"
+                  ><li></li>
+                  About Us</a
+                ><a href="#" class="footer__link header__link"
+                  ><li></li>
+                  Contacts</a
+                >
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__bot">
+            <span class="footer__bot-copyright"
+              >© 2023 EATLY All Rights Reserved.</span
+            >
+            <nav class="footer__bot__navigation">
+              <ul class="footer__bot-buttons">
+                <a href="#" class="footer__link header__link">
+                  <img src="/firstProject/images/inst logo.svg" alt="" /></a
+                ><a href="#" class="footer__link header__link">
+                  <img src="/firstProject/images/in logo.svg" alt="" /></a
+                ><a href="#" class="footer__link header__link">
+                  <img src="/firstProject/images/facebook logo.svg" alt="" /></a
+                ><a href="#" class="footer__link header__link">
+                  <img src="/firstProject/images/twitter logo.svg" alt="" />
+                </a>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
