css code edited to scss code

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -19,10 +19,10 @@
           <div class="header__inner">
             <div class="header__logo">
               <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
-              <span class="logo-text">eatly</span>
+              <span class="header__logo-text">eatly</span>
             </div>
             <nav class="header__navigation">
-              <ul class="navigation_buttons">
+              <ul class="header__navigation-buttons">
                 <a href="#" class="header__link">
                   <li>Menu</li>
                 </a>
@@ -51,28 +51,28 @@
 
     <section class="application">
       <div class="container">
-        <div class="section__inner">
-          <div class="box_left">
-            <div class="left_user">
+        <div class="application__inner">
+          <div class="application__left">
+            <div class="application__left-title">
               <img src="/firstProject/images/Line 203.svg" alt="line203" />
-              <span class="user_text">OVER 1000 USERS</span>
+              <span class="application__left-text">OVER 1000 USERS</span>
             </div>
-            <div class="left_content">
-              <h1 class="content_title">
+            <div class="application__left-content">
+              <h1 class="application__left-heading">
                 Enjoy Foods All Over The <purple>World</purple>
               </h1>
 
-              <span class="content_subtitle"
+              <span class="application__left-subtitle"
                 >EatLy help you set saving goals, earn cash back offers, Go to
                 disclaimer for more details and get paychecks up to two days
                 early. <purple>Get a $20 bonus.</purple></span
               >
             </div>
-            <div class="left_buttons">
-              <button class="button_first purpleButton">Get Started</button>
-              <button class="button_second whiteButton">Go Pro</button>
+            <div class="application__left-buttons">
+              <button class="purpleButton">Get Started</button>
+              <button class="whiteButton">Go Pro</button>
             </div>
-            <div class="left_rating">
+            <div class="application__left-rating">
               <img
                 src="/firstProject/images/trustpilot-1 1.svg"
                 alt="greenStarLogo"
@@ -82,29 +82,29 @@
                 alt="fiveStars"
                 id="rating_stars"
               />
-              <span class="rating_text">4900+</span>
+              <span class="application__left-grade">4900+</span>
             </div>
           </div>
 
-          <div class="box_right">
-            <div class="right_card card">
+          <div class="application__right">
+            <div class="application__right-card card">
               <img
                 src="/firstProject/images/Food Image.svg"
                 alt="smallPlate"
                 id="smallPlate"
               />
-              <div class="card_text">
-                <span class="card_title">Chicken Hell</span>
-                <span class="card_subtitle">On The Way</span>
-                <span class="card_time">3:09 PM</span>
+              <div class="card-text">
+                <span class="card-title">Chicken Hell</span>
+                <span class="card-subtitle">On The Way</span>
+                <span class="card-time">3:09 PM</span>
               </div>
             </div>
-            <div class="card_picture">
+            <div class="application__right-picture">
               <img src="/firstProject/images/Food Image.svg" alt="bigPlate" />
               <img
                 src="/firstProject/images/Ellipse 2038.svg"
                 alt="purpleBackground"
-                class="card_background"
+                class="application__right-background"
               />
             </div>
           </div>
@@ -114,53 +114,53 @@
 
     <section class="features">
       <div class="features__box">
-        <div class="features_item">
-          <h1 class="features_title">10K+</h1>
-          <span class="features_subtitle"
+        <div class="features__item">
+          <h1 class="features__item-title">10K+</h1>
+          <span class="features__item-subtitle"
             >Satisfied Costumers All Great Over The World
           </span>
         </div>
-        <div class="features_item">
-          <h1 class="features_title">4M</h1>
-          <span class="features_subtitle"
+        <div class="features__item">
+          <h1 class="features__item-title">4M</h1>
+          <span class="features__item-subtitle"
             >Healthy Dishes Sold Including Milk Shakes Smooth</span
           >
         </div>
-        <div class="features_item">
-          <h1 class="features_title">99.99%</h1>
-          <span class="features_subtitle"
+        <div class="features__item">
+          <h1 class="features__item-title">99.99%</h1>
+          <span class="features__item-subtitle"
             >Reliable Customer Support We Provide Great Experiences</span
           >
         </div>
       </div>
     </section>
 
-    <section class="application">
+    <section class="mobile">
       <div class="container">
-        <div class="application__inner">
-          <div class="application_left">
+        <div class="mobile__inner">
+          <div class="mobile__left">
             <img src="/firstProject/images/Mobile.svg" alt="mobileApp" />
           </div>
-          <div class="application_right">
-            <h1 class="application_right_title">
+          <div class="mobile__right">
+            <h1 class="mobile__right-title">
               Premium <purple>Quality</purple> For Your Health
             </h1>
-            <ul class="application_right_list">
-              <li class="application_right_list_item">
+            <ul class="mobile__right-list">
+              <li class="mobile__right-list-item">
                 Premium quality food is made with ingredients that are packed
                 with essential vitamins, minerals.
               </li>
-              <li class="application_right_list_item">
+              <li class="mobile__right-list-item">
                 These foods promote overall wellness by support healthy
                 digestion and boosting immunity
               </li>
             </ul>
-            <div class="application_right_more">
+            <div class="mobile__right-more">
               <button class="more_button purpleButton">Download -></button>
               <img
                 src="/firstProject/images/Vector 14.svg"
                 alt="vectorArrow"
-                class="application_right_more_vector"
+                class="mobile__right-more-vector"
               />
             </div>
           </div>
@@ -170,26 +170,28 @@
 
     <section class="restaurants">
       <div class="container">
-        <div class="restaurants_header">
-          <span class="header_top">Our Top <purple>Restaurants</purple></span>
+        <div class="restaurants__header">
+          <span class="restaurants__header-top"
+            >Our Top <purple>Restaurants</purple></span
+          >
         </div>
 
-        <div class="restaurants_list">
-          <div class="restaurants_list_item">
+        <div class="restaurants__list">
+          <div class="restaurants__list-item">
             <img
               src="/firstProject/images/Resturent Image.jpg"
               alt="chickenKing"
             />
 
-            <div class="item_information">
-              <span class="item_information_highlight healthy">Healthy</span>
-              <span class="item_information_name">The Chicken King</span>
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight healthy">Healthy</span>
+              <span class="restaurants__list-name">The Chicken King</span>
 
-              <div class="item_information_details">
-                <span class="details_time">24min •</span>
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
                 <img src="/firstProject/images/purpleStar.svg" alt="star" />
-                <span class="details_rating">4.8</span>
-                <button class="details_favorite_button favorite">
+                <span class="restaurants__list-rating">4.8</span>
+                <button class="restaurants__list-favorite-button favorite">
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
@@ -199,17 +201,17 @@
             </div>
           </div>
 
-          <div class="restaurants_list_item">
+          <div class="restaurants__list-item">
             <img src="/firstProject/images/burgerKing.jpg" alt="burgerKing" />
-            <div class="item_information">
-              <span class="item_information_highlight trending">Trending</span>
-              <span class="item_information_name">The Burger King</span>
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight trending">Trending</span>
+              <span class="restaurants__list-name">The Burger King</span>
 
-              <div class="item_information_details">
-                <span class="details_time">24min •</span>
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
                 <img src="/firstProject/images/purpleStar.svg" alt="star" />
-                <span class="details_rating">4.9</span>
-                <button class="details_favorite_button favorite">
+                <span class="restaurants__list-rating">4.9</span>
+                <button class="restaurants__list-favorite-button favorite">
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
@@ -219,20 +221,20 @@
             </div>
           </div>
 
-          <div class="restaurants_list_item">
+          <div class="restaurants__list-item">
             <img
               src="/firstProject/images/Resturent Image.jpg"
               alt="chickenKing"
             />
-            <div class="item_information">
-              <span class="item_information_highlight healthy">Healthy</span>
-              <span class="item_information_name">The Chicken King</span>
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight healthy">Healthy</span>
+              <span class="restaurants__list-name">The Chicken King</span>
 
-              <div class="item_information_details">
-                <span class="details_time">24min •</span>
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
                 <img src="/firstProject/images/purpleStar.svg" alt="star" />
-                <span class="details_rating">4.8</span>
-                <button class="details_favorite_button favorite">
+                <span class="restaurants__list-rating">4.8</span>
+                <button class="restaurants__list-favorite-button favorite">
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
@@ -242,9 +244,9 @@
             </div>
           </div>
         </div>
-        <div class="restaurants_bottom">
+        <div class="restaurants__bottom">
           <a href="#">
-            <span class="restaurants_bottom_text"> View All -> </span>
+            <span class="restaurants__bottom-text"> View All -> </span>
           </a>
         </div>
       </div>
@@ -377,10 +379,10 @@
                       alt="smallPlate"
                       id="smallPlate"
                     />
-                    <div class="card_text">
-                      <span class="card_title">Chicken Hell</span>
-                      <span class="card_subtitle">On The Way</span>
-                      <span class="card_time">3:09 PM</span>
+                    <div class="card-text">
+                      <span class="card-title">Chicken Hell</span>
+                      <span class="card-subtitle">On The Way</span>
+                      <span class="card-time">3:09 PM</span>
                     </div>
                   </div>
                 </div>
@@ -392,10 +394,10 @@
                       alt="smallPlate"
                       id="smallPlate"
                     />
-                    <div class="card_text">
-                      <span class="card_title">Swe Dish</span>
-                      <span class="card_subtitle delivered">Delivered</span>
-                      <span class="card_time">Yesterday</span>
+                    <div class="card-text">
+                      <span class="card-title">Swe Dish</span>
+                      <span class="card-subtitle delivered">Delivered</span>
+                      <span class="card-time">Yesterday</span>
                     </div>
                   </div>
                 </div>
@@ -407,10 +409,10 @@
                       alt="smallPlate"
                       id="smallPlate"
                     />
-                    <div class="card_text">
-                      <span class="card_title">Fish Hell Veg</span>
-                      <span class="card_subtitle canceled">Canceled</span>
-                      <span class="card_time">Yesterday</span>
+                    <div class="card-text">
+                      <span class="card-title">Fish Hell Veg</span>
+                      <span class="card-subtitle canceled">Canceled</span>
+                      <span class="card-time">Yesterday</span>
                     </div>
                   </div>
                 </div>
