animation added / new page started

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -17,13 +17,15 @@
       <div class="header">
         <div class="container">
           <div class="header__inner">
-            <div class="header__logo">
-              <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
-              <span class="header__logo-text">eatly</span>
-            </div>
+            <a href="index.html" class="header__link">
+              <div class="header__logo">
+                <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
+                <span class="header__logo-text">eatly</span>
+              </div>
+            </a>
             <nav class="header__navigation">
               <ul class="header__navigation-buttons">
-                <a href="#" class="header__link">
+                <a href="menu.html" class="header__link">
                   <li>Menu</li>
                 </a>
 
@@ -790,19 +792,18 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <div class="footer__top__logo">
+            <div class="footer__top__logo header__logo">
               <img src="/firstProject/images/Logo.svg" alt="logo" />
               <nav class="logo-eatly header__logo-text">eatly</nav>
             </div>
             <nav class="footer__top__navigation">
               <ul class="footer__top-buttons">
-                <a href="#" class="footer__link header__link"><li>Blog</li></a
-                ><a href="#" class="footer__link header__link"
-                  ><li>Pricing</li></a
-                ><a href="#" class="footer__link header__link"
+                <a href="#" class="header__link"><li>Blog</li></a
+                ><a href="#" class="header__link"><li>Pricing</li></a
+                ><a href="#" class="header__link"
                   ><li></li>
                   About Us</a
-                ><a href="#" class="footer__link header__link"
+                ><a href="#" class="header__link"
                   ><li></li>
                   Contacts</a
                 >
@@ -815,13 +816,13 @@
             >
             <nav class="footer__bot__navigation">
               <ul class="footer__bot-buttons">
-                <a href="#" class="footer__link header__link">
+                <a href="#" class="footer__link">
                   <img src="/firstProject/images/inst logo.svg" alt="" /></a
-                ><a href="#" class="footer__link header__link">
+                ><a href="#" class="footer__link">
                   <img src="/firstProject/images/in logo.svg" alt="" /></a
-                ><a href="#" class="footer__link header__link">
+                ><a href="#" class="footer__link">
                   <img src="/firstProject/images/facebook logo.svg" alt="" /></a
-                ><a href="#" class="footer__link header__link">
+                ><a href="#" class="footer__link">
                   <img src="/firstProject/images/twitter logo.svg" alt="" />
                 </a>
               </ul>
